closer. CORS problems now

--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,24 @@
 <body>
   <div class="container">
     <form class="taste">
-      <div class="form-group">
-        <label for="text">1) Please enter your name here👉 </label>
-        <input class="text" type="word">
-      </div>
-      <div class="form-group">
-        <label for="tasteType">Select type </label>
-        <select class="form-control" id="beverage">
-          <option></option>
-          <option value="movie">Movie</option>
-          <option value="music">Music</option>
-          <option value="author">Author</option>
-          <option value="podcast">Podcast</option>
-          <option value="book">Book </option>
-          <option value="show">Show</option>
-          <option value="game">Game</option>
-          <option value="">Other</option>
-        </select>
-      </div>
+
+      <label for="text">1) Please enter your name here👉 </label>
+      <input class="text" type="word" id="userString">
+
+
+      <label for="tasteForm">Select type </label>
+      <select class="form-control" id="typeForm">
+        <!-- <option></option> -->
+        <option value="movie">Movie</option>
+        <option value="music">Music</option>
+        <option value="author">Author</option>
+        <option value="podcast">Podcast</option>
+        <option value="book">Book </option>
+        <option value="show">Show</option>
+        <option value="game">Game</option>
+        <option value="">Other</option>
+      </select>
+
       <span class="button"><button type="submit" name="button">Add to your taste collection now</button></span>
 
 
